2007-08-06 Alexey Shusharin <mrfinch@mail.ru>
           Andrew Lunn <andrew.lunn@ascom.ch>
	
	* cdl/io_can.cdl: Added option CYGOPT_IO_CAN_SUPPORT_CALLBACK
      
	* include/canio.h: Added struct cyg_can_callback_cfg for setting
          callback configurations.
       
	* include/can.h: Added declaration and initialization of callback 
          configuration in struct can_channel.
       
	* src/can.c: Added callback configuration changing and
          application function call.

2007-07-02 Uwe Kindler <uwe_kindler@web.de>
    
	* cdl/io_can.cdl: Added interface CYGINT_IO_CAN_CHANNELS for
	  counting available CAN channels
      
	* include/canio.h: Changed type cyg_can_msgbuf_info. The two
	  fields are 16 bit now because device drivers may support more
	  than 256 message buffers (i.e. the LPC2xxx CAN driver)
    
2007-06-20  Uwe Kindler  <uwe_kindler@web.de>

	* test/can_filter: Changed filter loop counter from cyg_uint8 to
	  cyg_uint16 because LPC2xxx CAN driver supports more than 256
	  message buffers.

2007-03-23  Uwe Kindler  <uwe_kindler@web.de>

	* cdl/io_can.cdl: Added several interfaces for implementation by
	  device drivers.
	  Moved several configuration options from device drivers to the
	  generic CAN driver. With this design a device driver does not
	  need to provide all configuration options in its CDL file - it
	  simply needs to implement the provided interfaces. The drawback
	  of this decicsion is, that it is not possible to control these
	  options independently for several CAN devices. (But most platforms
	  will have only 1 channel)
	  Added configuration option CYGBLD_IO_CAN_EXTRA_TESTS. This option
	  enables the build of the interactive CAN tests.
	  
	* test/can_filter: Added interactive message filtering test
	
	* test/can_hdi: Added interactive hardware description interface
	  test
	  
	* test/can_load: Added interactive message handling (reception,
	  transmission) test.
	  